--- a/cmis-type-manager-web/pom.xml
+++ b/cmis-type-manager-web/pom.xml
@@ -13,8 +13,29 @@
     <artifactId>cmis-type-manager-web</artifactId>
     <packaging>war</packaging>
 
+    <repositories>
+        <repository>
+            <id>prime-repo</id>
+            <name>Prime Repo</name>
+            <url>http://repository.primefaces.org</url>
+        </repository>
+    </repositories>
+
     <dependencies>
-        
+        <!-- UI-BOOTSTRAP -->
+        <dependency>
+            <groupId>com.engagepoint</groupId>
+            <artifactId>ui-bootstrap-components</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+        <!-- /UI-BOOTSTRAP -->
+
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>3.5.8</version>
+        </dependency>
+
         <dependency>
             <groupId>dag.cmis-type-manager</groupId>
             <artifactId>cmis-type-manager-ejb</artifactId>
