--- a/cmis-type-manager-ejb/pom.xml
+++ b/cmis-type-manager-ejb/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>chemistry-opencmis-client-impl</artifactId>
             <version>0.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+        </dependency>
     </dependencies>
     
     <build>
