--- a/cmis-types-manager-ejb/pom.xml
+++ b/cmis-types-manager-ejb/pom.xml
@@ -3,24 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>cmis-type-manager</artifactId>
-        <groupId>dag</groupId>
-        <version>1.0</version>
+        <artifactId>cmis-types-manager-b</artifactId>
+        <groupId>com.engagepoint</groupId>
+        <version>${global.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    
-    <groupId>dag.cmis-type-manager</groupId>
-    <artifactId>cmis-type-manager-ejb</artifactId>
-    <packaging>ejb</packaging>
 
-    <repositories>
-        <repository>
-            <id>maven2-repository.dev.java.net</id>
-            <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
+    <groupId>com.engagepoint.cmis-types-manager-b</groupId>
+    <artifactId>cmis-types-manager-ejb</artifactId>
+    <packaging>ejb</packaging>
 
     <dependencies>
         <dependency>
@@ -34,7 +25,7 @@
             <version>7.0</version>
         </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
