--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dag</groupId>
-    <artifactId>cmis-type-manager</artifactId>
+    <groupId>com.engagepoint</groupId>
+    <artifactId>cmis-types-manager-b</artifactId>
     <packaging>pom</packaging>
-    <version>1.0</version>
+    <version>${global.version}</version>
     <modules>
-        <module>cmis-type-manager-ejb</module>
-        <module>cmis-type-manager-web</module>
-        <module>cmis-type-manager-ear</module>
+        <module>cmis-types-manager-ejb</module>
+        <module>cmis-types-manager-web</module>
+        <module>cmis-types-manager-ear</module>
     </modules>
 
     <repositories>
@@ -20,6 +20,11 @@
             <name>Java.net Repository for Maven</name>
             <url>http://download.java.net/maven/2/</url>
             <layout>default</layout>
+        </repository>
+        <repository>
+            <id>prime-repo</id>
+            <name>Prime Repo</name>
+            <url>http://repository.primefaces.org</url>
         </repository>
     </repositories>
 
@@ -31,5 +36,10 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+
+    <properties>
+        <global.version>1.0-SNAPSHOT</global.version>
+    </properties>
 
 </project>
